err/twork.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil-3.2.2.egg-info'...
Listing './lib/python3.5/site-packages/scaffold'...
Listing './lib/python3.5/site-packages/scaffold/twork_app'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/conf'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/tests'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/app'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/domain'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/domain/models'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/domain/web'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/domain/web/action'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/domain/web/models'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/libs'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/utils'...
Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/web'...
Compiling './lib/python3.5/site-packages/scaffold/twork_app/twork_app/web/assembly.py'...
***   File "./lib/python3.5/site-packages/scaffold/twork_app/twork_app/web/assembly.py", line 30
    print 'CURRENT_PATH:', CURRENT_PATH
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/scaffold/twork_app/twork_app/web/handler'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.2.1.egg-info'...
Listing './lib/python3.5/site-packages/twork'...
Listing './lib/python3.5/site-packages/twork/domain'...
Listing './lib/python3.5/site-packages/twork/timer'...
Listing './lib/python3.5/site-packages/twork/utils'...
Listing './lib/python3.5/site-packages/twork/web'...
Listing './lib/python3.5/site-packages/twork/web/action'...
Listing './lib/python3.5/site-packages/twork/web/static'...
Listing './lib/python3.5/site-packages/twork-2.0.11.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
